# fast-sudoku-solver

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  bitUtils.cpp  board.cpp  boardData.cpp  io.cpp  main.cpp  misc.cpp  option.cpp  pre.cpp  state.cpp
src/inc/: bitBoard.hpp  bitUtils.hpp  board.hpp  boardData.hpp  io.hpp  misc.hpp  option.hpp  pre.hpp  state.hpp
test/: CMakeLists.txt  bitUtilsTest.cpp  boardDataTest.cpp  boardTest.cpp  preTest.cpp  test.cpp  testBitUtils.cpp  testData.cpp  testData.hpp  testUtils.cpp  testUtils.hpp
